# hw-architect

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
app/: Cargo.toml
app/src/: camera_controller.rs  config.rs  configuration.rs  game_loop.rs  input_handler.rs  lib.rs  main.rs  resources.rs  shader.wgsl  state.rs
common/: Cargo.toml
common/src/: camera.rs  camera_controller.rs  curves.rs  input.rs  lib.rs  loader.rs  math_utils.rs  road.rs  road.txt
common/src/road/: curves.rs  generator.rs  network.rs  tool.rs
curves/src/: bezier.rs  curves.rs  guide_points.rs  lib.rs  spine.rs
curves/src/curves/: circular.rs  cubic.rs  quadratic.rs  raw_curve.rs  straight.rs
gfx-api/: Cargo.toml
gfx-api/src/: camera.rs  cmd.rs  colors.rs  data.rs  error.rs  lib.rs
gfx-bridge/: Cargo.toml
gfx-bridge/src/: camera.rs  lib.rs  roads.rs
gfx-wgpu/: Cargo.toml
gfx-wgpu/src/: gfx_state.rs  lib.rs  primitives.rs  render_utils.rs  renderer.rs  resources.rs  shaders.rs  vertex.rs
gfx-wgpu/src/primitives/: buffer.rs  camera.rs  instance.rs  model.rs  simple_model.rs  texture.rs  vertex.rs
gfx-wgpu/src/renderer/: main_renderer.rs  model_renderer.rs  road_renderer.rs  simple_renderer.rs  static_world_renderer.rs  terrain_renderer.rs  tree_renderer.rs
gfx-wgpu/src/shaders/: simple.wgsl  simple_c.wgsl
graphics/: Cargo.toml
graphics/src/: buffer.rs  graphics.rs  lib.rs  model.rs  old_graphics.txt  renderer.rs  resources.rs  road.wgsl  shader.wgsl  shaders.rs  terrain.rs  texture.rs  vertex.rs
graphics/src/renderer/: road_renderer.rs  sphere_renderer.rs  terrain_renderer.rs
graphics/src/shaders/: terrain.wgsl
hw-architect/: Cargo.toml
hw-architect/src/: camera_controller.rs  config.rs  lib.rs  state.rs
res/: baseconfig.yaml  baseconfig.yml
res/config/: base_config.yml  qwerty.yml  wokmok.yml
res/models/arrow/: arrow.blend
res/models/cube/: cube.blend
res/models/simple_test/: simple_test.blend
res/models/sphere/: sphere.blend  sphere.mtl
res/models/torus/: torus.blend
res/models/tree_test/: tree_test.blend  tree_test.mtl
simulation/: Cargo.toml
simulation/src/: curves.rs  lib.rs  network.rs  road_network.rs
simulation/src/road_network/: graph.rs  lanes.rs  node.rs  road_builder.rs  road_type.rs  segment.rs  snap.rs
src/: camera.rs  configuration.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  texture.rs
tool/: Cargo.toml
tool/src/: camera_controller.rs  cycle_selection.rs  gfx_gen.rs  lib.rs  road_gen.rs  road_tool.rs  tool_handler.rs  tool_state.rs  tools.rs  world_tool.rs
tool/src/gfx_gen/: segment_gen.rs
tool/src/road_gen/: curve_gen.rs  generator.rs  mesh_gen.rs  road_gen_cases.md
tool/src/road_tool/: bulldoze_tool.rs  construct_tool.rs  generator.rs
tool/src/road_tools/: bulldoze_tool.rs  construct_tool.rs  generator.rs
tool/src/tools/: bulldoze.rs  construct.rs  tree_plopper.rs  world_tool.rs
tool/src/tools/construct/: circular_tool.rs  curve_tool_spec.rs  lib.rs  straight_tool.rs
utility-crates/curves/: Cargo.toml
utility-crates/curves/src/: curve_gen.rs  curves.rs  guide_points.rs  lib.rs  spine.rs  spine_points.rs
utility-crates/curves/src/curves/: circular.rs  cubic.rs  quadratic.rs  straight.rs
utility-crates/utils/: Cargo.toml
utility-crates/utils/src/: consts.rs  id.rs  input.rs  lib.rs  math.rs  math_utils.rs  time.rs
utility-crates/utils/src/curves/: points.rs
utility-crates/utils/src/id/: id_manager.rs  id_map.rs  id_set.rs
utility-crates/utils/src/math/: dir.rs  vec.rs
utils/: Cargo.toml
utils/src/: consts.rs  curves.rs  id.rs  input.rs  lib.rs  loader.rs  math.rs  math_utils.rs
utils/src/curves/: curve_gen.rs  points.rs
utils/src/math/: cur.rs  dir.rs  loc.rs  mat.rs
winit-app/: Cargo.toml
winit-app/src/: game_loop.rs  input_handler.rs  lib.rs  main.rs
world/: Cargo.toml
world-api/: Cargo.toml
world-api/src/: builder.rs  lib.rs  road_builder.rs  road_type.rs  snap.rs  tree.rs
world/src/: api.rs  lib.rs  nature.rs  roads.rs  simulation.rs
world/src/nature/: trees.rs
world/src/roads/: graph.rs  node.rs  road_builder.rs  road_gen_cases.md  road_type.rs  segment.rs  snap.rs
world/src/simulation/: sim_handler.rs  vehicle.rs
