[workspace]
members = [
"app",
"gfx-api",
"gfx-wgpu",
"tool",
"utils",
"world",
"world-api",
]
default-members = [
"app",
]
resolver="2"

[workspace.dependencies]
bytemuck = { version = "1.13", features = [ "derive" ] }

anyhow = "1.0"
instant = "0.1"
serde = { version = "1.0", features = ["derive"] }

glam = { version = "0.22", default-features = false, features = ["serde", "bytemuck"] }
rand = "^0.8"
