[workspace]
members = [
"app",
"gfx-api",
"gfx-wgpu",
"tool",
"utility-crates/*",
"world",
"world-api",
]
default-members = [
"app",
]
resolver="2"

[workspace.dependencies]
gfx-api = { path = "gfx-api" }
gfx-wgpu = { path = "gfx-wgpu" }
tool = { path = "tool" }
utils = { path = "utility-crates/utils" }
curves = { path = "utility-crates/curves" }
world = { path = "world" }
world-api = { path = "world-api" }

bytemuck = { version = "1.13", features = [ "derive" ] }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }

num = { version = "0.4", default-features = false }
glam = { version = "0.22", default-features = false, features = ["serde", "bytemuck"] }
rand = "^0.8"

bit-vec = { version = "0.6", features = ["serde"] }
fixedbitset = { version = "0.4.2", features = ["serde"] }

[profile.dev]
opt-level = 1
