[workspace]
members = [
"winit-app",
"hw-architect",
"gfx-api",
"gfx-wgpu",
"tool",
"utility-crates/*",
"world",
"world-api",
]
default-members = [
"winit-app",
]
resolver="2"

[workspace.dependencies]
gfx-api = { path = "gfx-api" }
gfx-wgpu = { path = "gfx-wgpu" }
hw-architect = { path = "hw-architect" }
tool = { path = "tool" }
utils = { path = "utility-crates/utils" }
curves = { path = "utility-crates/curves" }
world = { path = "world" }
world-api = { path = "world-api" }

bytemuck = { version = "=1.16", features = [ "derive" ] }

serde = { version = "1.0.204", features = ["derive", "rc"] }

num = { version = "0.4", default-features = false }
glam = { version = "0.28", default-features = false, features = ["serde", "bytemuck"] }
rand = "0.8"

bit-vec = { version = "0.7", features = ["serde"] }
fixedbitset = { version = "0.5", features = ["serde"] }

enum_dispatch = "0.3"

[profile.dev]
opt-level = 1
