[package]
name = "hw-architect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
gfx-wgpu = { path = "../gfx-wgpu"  }
gfx-api = { path = "../gfx-api" }
common = { path = "../common"}
utils = { path = "../utils"}

winit = "0.26"
wgpu = "0.13"
glam = { version = "0.21.3", default-features = false, features = ["serde", "bytemuck"] }

env_logger = "0.9"
log = "0.4"

pollster = "0.2"
anyhow = "1.0"
instant = "0.1"
cfg-if = "1"

yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
directories = "4.0"

# Specific for web assembly
# Only included if targeting wasm32 architecture
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}
