[package]
name = "hw-architect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
gfx-wgpu = { path = "../gfx-wgpu"  }
gfx-api = { path = "../gfx-api" }
tool = { path = "../tool"}
utils = { path = "../utils"}
world = { path = "../world"}

winit = { workspace = true }
wgpu = { workspace = true }

anyhow = { workspace = true }
instant = { workspace = true }

glam = { workspace = true }

env_logger = "0.10"
log = "0.4"

pollster = "0.2"
cfg-if = "1"

yaml-rust = "0.4"
serde = { workspace = true }
serde_yaml = "0.9"
directories = "4.0"

# Specific for web assembly
# Only included if targeting wasm32 architecture
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}
