[package]
name = "hw-architect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
gfx-wgpu = { workspace = true }
gfx-api = { workspace = true }
tool = { workspace = true }
utils = { workspace = true }
world = { workspace = true }

winit = "0.27"

anyhow = { workspace = true }

glam = { workspace = true }

env_logger = "0.10"
log = "0.4"

pollster = "0.2"

serde = { workspace = true }
serde_yaml = "0.9"
directories = "4.0"
figment = { version = "0.10.10", features = ["yaml"] }
