[package]
name = "gfx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { path = "../utils" }

# These two dependencies should be removed
wgpu = { workspace = true }
winit = { workspace = true }

bytemuck = { workspace = true }
instant = { workspace = true }

glam = { workspace = true }
