[package]
name = "gfx-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { path = "../utils" }
gfx-api = { path = "../gfx-api" }

winit = "0.27"
wgpu = "0.14"
glam = { version = "0.22", default-features = false, features = ["serde", "bytemuck"] }

bytemuck = { version = "1.13", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2", features = [
  "async",
]}
instant = "0.1"
rand = "^0.8"
cfg-if = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# Specific for web assembly
# Only included if targeting wasm32 architecture
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
getrandom = { version = "0.2", features = ["js"] }
