[package]
name = "gfx-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { workspace = true }
gfx-api = { workspace = true }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }

bytemuck = { workspace = true }

anyhow = { workspace = true }

glam = { workspace = true }
rand = { workspace = true }

tobj = { version = "3.2" }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
