[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
  "async",
]}
instant = "0.1"
directories = "4.0"
rand = "^0.8"
common = { path = "../common"}
# Specific for web assembly
cfg-if = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

# Specific for web assembly
# Only included if targeting wasm32 architecture
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}
getrandom = { version = "0.2", features = ["js"] }
