[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
curves = { workspace = true }
utils = { workspace = true }
world-api = { workspace = true }
gfx-api = { workspace = true }

bytemuck = { workspace = true }
thiserror = { workspace = true }
enum_dispatch = { workspace = true }

glam = { workspace = true }
