[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
glam = { version = "0.21.3", default-features = false, features = ["serde", "bytemuck"] }
cfg-if = "1"

[build-dependencies]
anyhow = "1.0"
