[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = { version = "0.22", default-features = false, features = ["serde", "bytemuck"] }

anyhow = "1.0"
cfg-if = "1"

strum = "0.24.0"
strum_macros = "0.24.0"

