[package]
name = "hw-architect-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
gfx-wgpu = { workspace = true }
gfx-api = { workspace = true }
hw-architect = { workspace = true }
utils = { workspace = true }

winit = "0.29"

anyhow = "1.0"

env_logger = "0.11"
log = "0.4"

pollster = "0.3"

serde = { workspace = true }
serde_yaml = "0.9.33"
