[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { workspace = true }
world-api = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }

glam = { workspace = true }
rand = { workspace = true }

fixedbitset = { workspace = true }
