[package]
name = "curves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { workspace = true }

glam = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }

enum_dispatch = { workspace = true }
