[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Allow Rust to build rust static library (rlib) and c compatible library (cdylib)
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = { workspace = true }

anyhow = { version = "1.0" }
serde = { workspace = true }
num = { workspace = true }
fixedbitset = { workspace = true }
rand = { workspace = true }

strum = "0.24.0"
strum_macros = "0.24.0"
